cluster/apps/media-stack/jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-stack
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.9.6
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media # Montamos el SMB para que Jellyfin pueda escanearlo
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media # Usa el mismo hostPath que los otros 'arrs'
          hostPath:
            path: /mnt/windows-media
