cluster/apps/media-stack/jellyfin/jellyfin-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-stack
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.homelab.local`) # Dominio para Jellyfin
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
